# program-management

./: .gitignore  README.md
apps/api/: README.md  manage.py  pyproject.toml
apps/api/grants/: models.py  serializers.py  views.py
apps/api/nonprofit_ops_api/: settings.py  urls.py
apps/api/platform_core/: apps.py  models.py  serializers.py  views.py
apps/web/: README.md  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  module-page.tsx  page.tsx
apps/web/app/(operations)/operations/: page.tsx
apps/web/app/(portal)/portal/: page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/api/_helpers/: module-route.ts
apps/web/app/api/admin/: route.ts
apps/web/app/api/ai/rewrite/: route.ts
apps/web/app/api/crm/: route.ts
apps/web/app/api/fundraising/: route.ts
apps/web/app/api/grants/: route.ts
apps/web/app/api/grants/[id]/: route.ts
apps/web/app/api/mel/: route.ts
apps/web/app/api/modules/[module]/[id]/: route.ts
apps/web/app/api/portal/: route.ts
apps/web/app/api/programs/: route.ts
apps/web/app/crm/: page.tsx
apps/web/app/fundraising/: page.tsx
apps/web/app/grants/: page.tsx
apps/web/app/mel/: page.tsx
apps/web/app/programs/: page.tsx
apps/web/lib/: mockdb.ts  module-data.ts
docs/: blueprint.md  data-model.md  infrastructure.md
